<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_servers</name>
  <version>0.0.1</version>
  <description>ROS 2 implementation for Fanuc CRX10</description>
  <maintainer email="kolds@uidaho.edu">Kris Olds</maintainer>
  <license>TODO: License declaration</license>

  <depend>fanuc_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
